--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,23 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <form (submit)="doSignup()">
+    <ion-list>
+
+      <ion-item>
+          <ion-input stacked placeholder="Novo Todo" type="text" [(ngModel)]="novoTodo" name="novoTodo"></ion-input>
+      </ion-item>
+      <ion-item>
+        <button ion-button (click)="addTodo()" type="button">
+          Add
+        </button>
+      </ion-item>
+
+      <ion-item *ngFor="let todo of lista">
+        <ion-label fixed>{{todo.nome}}</ion-label>
+        <ion-checkbox ([ngModel])="todo.checked">
+        </ion-checkbox>
+      </ion-item>
+    </ion-list>
+  </form>
 </ion-content>
