--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,23 +7,30 @@
 </ion-header>
 
 <ion-content padding>
-  <form (submit)="doSignup()">
+  <form>
     <ion-list>
-
       <ion-item>
-          <ion-input stacked placeholder="Novo Todo" type="text" [(ngModel)]="novoTodo" name="novoTodo"></ion-input>
+        <ion-input stacked placeholder="Novo Todo" type="text" [(ngModel)]="novoTodo" name="novoTodo"></ion-input>
       </ion-item>
       <ion-item>
         <button ion-button (click)="addTodo()" type="button">
-          Add
+          {{editandoIndex === -1 ? 'Add' : 'Concluído'}}
         </button>
       </ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-item-sliding #item *ngFor="let todo of lista; let i = index">
+        <ion-item>
+          <ion-label fixed>{{todo.nome}}</ion-label>
+          <ion-checkbox ([ngModel])="todo.checked">
+          </ion-checkbox>
+        </ion-item>
 
-      <ion-item *ngFor="let todo of lista">
-        <ion-label fixed>{{todo.nome}}</ion-label>
-        <ion-checkbox ([ngModel])="todo.checked">
-        </ion-checkbox>
-      </ion-item>
+        <ion-item-options side="left">
+          <button ion-button (click)="excluir(i)">Excluir</button>
+          <button ion-button color="danger" (click)="editar(todo)">Editar</button>
+        </ion-item-options>
+      </ion-item-sliding>
     </ion-list>
   </form>
 </ion-content>
